fixed about and header spacing
padding to about text and header spacing

--- a/website/website_react_update/src/editabout.css
+++ b/website/website_react_update/src/editabout.css
@@ -52,6 +52,8 @@ html, body {
 
 .body-text{
   text-align: left;
+  padding-left: 60px;
+  padding-right: 60px;
 }
 
 .headshot{
