--- a/website/website_react_update/src/editheader.css
+++ b/website/website_react_update/src/editheader.css
@@ -8,7 +8,6 @@
 .image {
     width: 120px; 
     height: auto; 
-
 }
 
 header {
@@ -17,8 +16,8 @@ header {
   justify-content: space-between;
   align-items: center; 
   position: absolute;
-  top: -25px;
-  left: -16px;
+  top: -15px;
+  left: -3px;
   width: 100%; 
   padding: 0 20px; 
   font-size: 20px;
